test(JM2MH-5): Add test for repository layer and fix entity annotations